Extensive refactor from Java to Kotlin